# PINNs_signal_separation-pub

./: README.md  environment.yml  install_env.sh  pyproject.toml
data/deblending/: gom_blend.npy  gom_blend_summary.txt
data/ground_roll/: GRKAUST.npy  sand_dunes.npy  synth_data.npy
data/interpolation/field/: gom_dips.npy  gom_dips_summary.txt
data/interpolation/synth/: dataset_info.txt  seam_shot_15Hz.npy
data/precomputed_results/deblending/: SEAMshot.pt  loss_data_values.npy  loss_phy_values.npy  loss_values.npy  param_summary.txt  slope1.npy  slope2.npy  slopeSEAMshot.pt  u1.npy  u2.npy
data/precomputed_results/deblending/single_out_pinnslope/: lossdata.npy  lossphy.npy  losstot.npy  param_summary.txt  ps_model_int.pt  slope.npy  u.npy  (+1 more)
data/results/Double_slope_GOMmirror/: DoublePINNout.npy  lossdata,py.npy  lossphy.npy  losstot.npy  param_summary.txt  slope1.npy  slope2.npy  u1.npy  u2.npy
data/results/Double_slope_SEAMshot/: DoublePINNout.npy  SEAMshot.pt  lossdata,py.npy  lossphy.npy  losstot.npy  param_summary.txt  slope1.npy  slope2.npy  slopeSEAMshot.pt  u1.npy  u1u2.npy  u2.npy
data/results/PINNslope_GOMmirror/: DoublePINNout.npy  SEAMshot.pt  lossdata.npy  lossphy.npy  losstot.npy  slopeDoublePINNout.npy  slopeSEAMshot.pt
data/results/PINNslope_SEAMshot/: SEAMshot.pt  lossdata,py.npy  lossphy.npy  losstot.npy  slopeSEAMshot.pt  slope_u_npy.npy  u_npy.npy
data/synthetic_slope_comp/: PINNslope.npy  PWD.npy
notebooks/: ground_roll.ipynb  interp_and_deb.ipynb  slope_comparison.ipynb
signal_sep_pinns/: slopes.py  train_functions.py  utils.py
(+65 files in other folders)
