[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "signal_sep_pinns"
authors = [
    {name = "Francesco Brandolin", email = "francesco.brandolin@kaust.edu.sa"},
]
description = "Local slope guided signal separation with PINNs"
readme = "README.md"
requires-python = ">=3.12"
keywords = ["signal separation", "seismic"]
license = {text = "BSD 3-Clause License"}
classifiers = [
        "Intended Audience :: Science/Research",
        "Natural Language :: English",
        "Programming Language :: Python :: 3.12",
        "Topic :: Scientific/Engineering :: Mathematics",
    ]
dependencies = [
        "numpy<2.0",
        "torch>=2.2.2",
        "pylops >= 2.4.0",
 	"setuptools >= 72.1.0 ",
    ]

dynamic = ["version"]

[tool.setuptools.packages]
find = {}


